--- a/paper/code/strong_norm_base.tex
+++ b/paper/code/strong_norm_base.tex
@@ -1061,8 +1061,10 @@
 \AgdaFunction{Subst}\AgdaSpace{}%
 \AgdaBound{Γ}\AgdaSpace{}%
 \AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊨}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -1088,11 +1090,10 @@
 \AgdaBound{σ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaBound{Lσ}\AgdaSpace{}%
 \AgdaBound{ρ}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSpace{}%
-\AgdaKeyword{rewrite}\AgdaSpace{}%
-\AgdaFunction{cong}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{v}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaKeyword{rewrite}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{rename-subst-ids}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1103,8 +1104,10 @@
 \AgdaBound{v}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{ρ}\AgdaSymbol{\})}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSymbol{\})}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{SN*-rename}\AgdaSpace{}%
 \AgdaBound{ρ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{Lσ}\AgdaSpace{}%
@@ -1757,23 +1760,25 @@
 \AgdaSymbol{\{}\AgdaBound{σ}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Subst}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
-\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaDatatype{SN*}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
 \AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊨}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{Γ}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⊨}}\AgdaSpace{}%
@@ -1786,7 +1791,7 @@
 \AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSymbol{)}%
 \>[11]\AgdaInductiveConstructor{Z}%
-\>[16]\AgdaSymbol{=}\AgdaSpace{}%
+\>[17]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{t}\<%
 \\
 \>[0]\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⊨}}\AgdaSpace{}%
@@ -1794,8 +1799,8 @@
 \AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{S}}\AgdaSpace{}%
-\AgdaBound{v}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{v}\AgdaSymbol{)}%
+\>[17]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaBound{σ}\AgdaSpace{}%
 \AgdaBound{v}\<%
 \end{code}
