--- a/paper/references.bib
+++ b/paper/references.bib
@@ -149,8 +149,10 @@
 	year = {1989}
 }
 @misc{Kovacs,
-	url = {https://github.com/AndrasKovacs/misc-stuff/blob/master/agda/STLCStrongNorm/StrongNorm2.agda}
+	url = {https://github.com/AndrasKovacs/misc-stuff/blob/master/agda/STLCStrongNorm/StrongNorm2.agda},
+	options = {skipbib=true}
 }
 @misc{Barenbaum,
-	url = {https://github.com/foones/formal-proofs/blob/master/strong-normalization/reducibility-candidates.agda}
+	url = {https://github.com/foones/formal-proofs/blob/master/strong-normalization/reducibility-candidates.agda},
+	options = {skipbib=true}
 }
