--- a/paper/code/strong_norm.tex
+++ b/paper/code/strong_norm.tex
@@ -1122,378 +1122,468 @@
 
 %<*lemma-curry>
 \begin{code}%
-	\>[0]\AgdaFunction{lemma-curry}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSpace{}%
-	\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{u}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{→}\<%
-	\\
-	\>[0][@{}l@{\AgdaIndent{0}}]%
-	\>[2]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
-	\AgdaBound{u}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaBound{ρ}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaFunction{Rename}\AgdaSpace{}%
-	\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaSymbol{→}\<%
-	\\
-	%
-	\>[2]\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-	\AgdaBound{u}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaFunction{ids}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
-	\AgdaBound{ρ}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-	\AgdaFunction{σ-curry}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{))}\<%
-	\\
-	\>[0]\AgdaFunction{lemma-curry}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{A}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{B}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{Lt}\AgdaSpace{}%
-	\AgdaBound{SNu}\AgdaSpace{}%
-	\AgdaBound{ρ}\AgdaSpace{}%
-	\AgdaSymbol{=}\<%
-	\\
-	\>[0][@{}l@{\AgdaIndent{0}}]%
-	\>[2]\AgdaOperator{\AgdaFunction{case}}\AgdaSpace{}%
-	\AgdaBound{Lt}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{ρ}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaInductiveConstructor{π}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
-	\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
-	\AgdaBound{SNu}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{of}}\AgdaSpace{}%
-	\AgdaSymbol{λ}\AgdaSpace{}%
-	\AgdaSymbol{\{(}\AgdaInductiveConstructor{sn*}\AgdaSpace{}%
-	\AgdaBound{Lr}\AgdaSpace{}%
-	\AgdaSymbol{\AgdaUnderscore{})}\AgdaSpace{}%
-	\AgdaSymbol{→}\<%
-	\\
-	\>[2][@{}l@{\AgdaIndent{0}}]%
-	\>[4]\AgdaFunction{transport}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaSymbol{(}\AgdaFunction{subst-curry-split}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaInductiveConstructor{∅}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{\})}\<%
-	\\
-	%
-	\>[6]\AgdaSymbol{(}\AgdaBound{Lr}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaSymbol{λ}\AgdaSpace{}%
-	\AgdaBound{x}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaBound{x}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaInductiveConstructor{π}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
-	\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
-	\AgdaBound{SNu}\AgdaSymbol{))\}}\<%
+\>[0]\AgdaFunction{lemma-curry}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{u}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{ρ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Rename}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[2]\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{ids}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaFunction{σ-curry}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{))}\<%
+\\
+\>[0]\AgdaFunction{lemma-curry}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{A}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{B}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{Lt}\AgdaSpace{}%
+\AgdaBound{SNu}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSpace{}%
+\AgdaSymbol{=}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaOperator{\AgdaFunction{case}}\AgdaSpace{}%
+\AgdaBound{Lt}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{π}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
+\AgdaBound{SNu}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{of}}\AgdaSpace{}%
+\AgdaSymbol{λ}\AgdaSpace{}%
+\AgdaSymbol{\{(}\AgdaInductiveConstructor{sn*}\AgdaSpace{}%
+\AgdaBound{Lr}\AgdaSpace{}%
+\AgdaSymbol{\AgdaUnderscore{})}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaFunction{transport}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaSymbol{(}\AgdaFunction{subst-curry-split}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{∅}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{\})}\<%
+\\
+%
+\>[6]\AgdaSymbol{(}\AgdaBound{Lr}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaSymbol{λ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{π}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₂}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
+\AgdaBound{SNu}\AgdaSymbol{))\}}\<%
 \end{code}
 %</lemma-curry>
+%<*lemma-curry-eta>
+\begin{code}
+\>[0]\AgdaFunction{lemma-curry-η}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⇒}}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{u}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{ρ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Rename}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[2]\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{ids}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaFunction{σ-curry}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{rename}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{S\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{·}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{)))}\<%
+\\
+\>[0]\AgdaFunction{lemma-curry-η}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{A}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{B}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{Lt}\AgdaSpace{}%
+\AgdaBound{SNu}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSpace{}%
+\AgdaSymbol{=}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaFunction{lemma-·}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaSymbol{(}\AgdaFunction{transport}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaSymbol{(}\AgdaFunction{subst-shift-curry-split}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{\})}\<%
+\\
+%
+\>[6]\AgdaSymbol{(}\AgdaBound{Lt}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{π}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
+\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
+\AgdaBound{SNu}\AgdaSymbol{)))}\<%
+\\
+%
+\>[4]\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
+\AgdaBound{SNu}\AgdaSymbol{)}\<%
+\end{code}
+%</lemma-curry-eta>
 
 %<*lemma-uncurry>
 \begin{code}%
-	\>[0]\AgdaFunction{lemma-uncurry}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSpace{}%
-	\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{u}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{→}\<%
-	\\
-	\>[0][@{}l@{\AgdaIndent{0}}]%
-	\>[2]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
-	\AgdaBound{u}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaBound{ρ}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaFunction{Rename}\AgdaSpace{}%
-	\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaSymbol{→}\<%
-	\\
-	%
-	\>[2]\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-	\AgdaBound{u}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaFunction{ids}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
-	\AgdaBound{ρ}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-	\AgdaFunction{σ-uncurry}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{))}\<%
-	\\
-	\>[0]\AgdaFunction{lemma-uncurry}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{A}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{B}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{Lt}\AgdaSpace{}%
-	\AgdaBound{SNu}\AgdaSpace{}%
-	\AgdaBound{ρ}\AgdaSpace{}%
-	\AgdaSymbol{=}\<%
-	\\
-	\>[0][@{}l@{\AgdaIndent{0}}]%
-	\>[2]\AgdaFunction{lemma-ƛ}\<%
-	\\
-	\>[2][@{}l@{\AgdaIndent{0}}]%
-	\>[4]\AgdaSymbol{(λ}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{\AgdaUnderscore{}}\AgdaSymbol{\}\{}\AgdaBound{ρ₁}\AgdaSymbol{\}\{}\AgdaBound{u₁}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{SNu₁}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaFunction{aux}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{Lt}\AgdaSpace{}%
-	\AgdaBound{SNu}\AgdaSpace{}%
-	\AgdaBound{SNu₁}\AgdaSpace{}%
-	\AgdaBound{ρ}\AgdaSpace{}%
-	\AgdaBound{ρ₁}\AgdaSymbol{)}\<%
-	\\
-	%
-	\>[4]\AgdaSymbol{(}\AgdaFunction{transport}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaSymbol{(}\AgdaFunction{Z-weaken}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaInductiveConstructor{∅}\AgdaSymbol{\})}\<%
-	\\
-	%
-	\>[6]\AgdaSymbol{(}\AgdaFunction{aux}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{Lt}\AgdaSpace{}%
-	\AgdaBound{SNu}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaFunction{lemma-var}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{v}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaInductiveConstructor{Z}\AgdaSymbol{\})}\AgdaSpace{}%
-	\AgdaBound{ρ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{S\AgdaUnderscore{}}}\AgdaSymbol{))}\<%
-	\\
-	%
-	\>[2]\AgdaKeyword{where}\<%
-	\\
-	\>[2][@{}l@{\AgdaIndent{0}}]%
-	\>[4]\AgdaFunction{aux}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaSymbol{∀}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSpace{}%
-	\AgdaBound{Δ₁}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSpace{}%
-	\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaBound{C}\AgdaSymbol{\}\{}\AgdaBound{u₁}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaBound{A}\AgdaSymbol{\}\{}\AgdaBound{u₂}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaBound{Δ₁}\AgdaSpace{}%
-	\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
-	\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{→}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
-	\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
-	\AgdaBound{u₁}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
-	\AgdaBound{u₂}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaBound{ρ₁}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaFunction{Rename}\AgdaSpace{}%
-	\AgdaBound{Γ}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaSymbol{→}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaBound{ρ₂}\AgdaSpace{}%
-	\AgdaSymbol{:}\AgdaSpace{}%
-	\AgdaFunction{Rename}\AgdaSpace{}%
-	\AgdaBound{Δ}\AgdaSpace{}%
-	\AgdaBound{Δ₁}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaSymbol{→}\<%
-	\\
-	%
-	\>[6]\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-	\AgdaBound{u₂}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
-	\AgdaFunction{ids}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
-	\AgdaBound{ρ₂}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-	\AgdaFunction{exts}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaBound{u₁}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
-	\AgdaFunction{ids}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
-	\AgdaBound{ρ₁}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-	\AgdaFunction{σ-uncurry}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{)))}\<%
-	\\
-	%
-	\>[4]\AgdaFunction{aux}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaBound{Lt}\AgdaSpace{}%
-	\AgdaBound{SNu₁}\AgdaSpace{}%
-	\AgdaBound{SNu₂}\AgdaSpace{}%
-	\AgdaBound{ρ₁}\AgdaSpace{}%
-	\AgdaBound{ρ₂}\AgdaSpace{}%
-	\AgdaSymbol{=}\<%
-	\\
-	\>[4][@{}l@{\AgdaIndent{0}}]%
-	\>[6]\AgdaFunction{transport}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
-	\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
-	\\
-	\>[6][@{}l@{\AgdaIndent{0}}]%
-	\>[8]\AgdaSymbol{(}\AgdaFunction{sym}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaFunction{subst-uncurry-split}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaInductiveConstructor{∅}\AgdaSymbol{\}}\AgdaSpace{}%
-	\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
-	\AgdaSymbol{=}\AgdaSpace{}%
-	\AgdaBound{t}\AgdaSymbol{\}))}\<%
-	\\
-	%
-	\>[8]\AgdaSymbol{(}\AgdaBound{Lt}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaFunction{lemma-⟨,⟩}\AgdaSpace{}%
-	\AgdaSymbol{(}\AgdaFunction{SN*-rename}\AgdaSpace{}%
-	\AgdaBound{ρ₂}\AgdaSpace{}%
-	\AgdaBound{SNu₁}\AgdaSymbol{)}\AgdaSpace{}%
-	\AgdaBound{SNu₂}\AgdaSymbol{))}\<%
+\>[0]\AgdaFunction{lemma-uncurry}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{t}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{×}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{C}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{u}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaOperator{\AgdaFunction{⟦}}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟧}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{ρ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Rename}\AgdaSpace{}%
+\AgdaBound{Γ}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[2]\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{ids}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{ƛ}}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaFunction{σ-uncurry}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{))}\<%
+\\
+\>[0]\AgdaFunction{lemma-uncurry}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{Δ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{A}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{B}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{Lt}\AgdaSpace{}%
+\AgdaBound{SNu}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSpace{}%
+\AgdaSymbol{=}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaFunction{lemma-ƛ}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaSymbol{(λ}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{\AgdaUnderscore{}}\AgdaSymbol{\}\{}\AgdaBound{ρ₁}\AgdaSymbol{\}\{}\AgdaBound{u₁}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{SNu₁}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{lemma-uncurry₂}\AgdaSpace{}%
+\AgdaBound{SNu₁}\AgdaSpace{}%
+\AgdaBound{ρ₁}\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaSymbol{(}\AgdaFunction{transport}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaSymbol{(}\AgdaFunction{Z-weaken}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{∅}\AgdaSymbol{\})}\<%
+\\
+%
+\>[6]\AgdaSymbol{(}\AgdaFunction{lemma-uncurry₂}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{lemma-var}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{v}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{Z}\AgdaSymbol{\})}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{S\AgdaUnderscore{}}}\AgdaSymbol{))}\<%
+\\
+%
+\>[2]\AgdaKeyword{where}\<%
+\\
+\>[2][@{}l@{\AgdaIndent{0}}]%
+\>[4]\AgdaFunction{lemma-uncurry₂}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{∀}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{Δ₁}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{u₂}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{Δ₁}\AgdaSpace{}%
+\AgdaOperator{\AgdaDatatype{⊢}}\AgdaSpace{}%
+\AgdaBound{B}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaBound{u₂}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{ρ₂}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaFunction{Rename}\AgdaSpace{}%
+\AgdaBound{Δ}\AgdaSpace{}%
+\AgdaBound{Δ₁}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\<%
+\\
+%
+\>[6]\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaBound{u₂}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
+\AgdaFunction{ids}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
+\AgdaBound{ρ₂}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaFunction{exts}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{u}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{•}}\AgdaSpace{}%
+\AgdaFunction{ids}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
+\AgdaFunction{σ-uncurry}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{)))}\<%
+\\
+%
+\>[4]\AgdaFunction{lemma-uncurry₂}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{u₂}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{u₂}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaBound{SNu₂}\AgdaSpace{}%
+\AgdaBound{ρ₂}\AgdaSpace{}%
+\AgdaSymbol{=}\<%
+\\
+\>[4][@{}l@{\AgdaIndent{0}}]%
+\>[6]\AgdaFunction{transport}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
+\\
+\>[6][@{}l@{\AgdaIndent{0}}]%
+\>[8]\AgdaSymbol{(}\AgdaFunction{sym}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{subst-uncurry-split}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaInductiveConstructor{∅}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{t}\AgdaSymbol{\}))}\<%
+\\
+%
+\>[8]\AgdaSymbol{(}\AgdaBound{Lt}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaBound{ρ₂}\AgdaSpace{}%
+\AgdaOperator{\AgdaFunction{∘}}\AgdaSpace{}%
+\AgdaBound{ρ}\AgdaSymbol{\}}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
+\AgdaSymbol{=}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟨}}\AgdaSpace{}%
+\AgdaFunction{rename}\AgdaSpace{}%
+\AgdaBound{ρ₂}\AgdaSpace{}%
+\AgdaBound{u}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
+\AgdaBound{u₂}\AgdaSpace{}%
+\AgdaOperator{\AgdaInductiveConstructor{⟩}}\AgdaSymbol{\}}\AgdaSpace{}\<%
+\\
+\>[8][@{}l@{\AgdaIndent{0}}]%
+\>[9]\AgdaSymbol{(}\AgdaFunction{lemma-⟨,⟩}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{SN*-rename}\AgdaSpace{}%
+\AgdaBound{ρ₂}\AgdaSpace{}%
+\AgdaBound{SNu}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaBound{SNu₂}\AgdaSymbol{))}\<%
 \end{code}
 %</lemma-uncurry>
 
@@ -2092,7 +2182,6 @@
 		%</iso-sym-dist>
 		%<*iso-curry>
 		\begin{code}%
-			%
 			\>[8]\AgdaFunction{aux}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{sn*}\AgdaSpace{}%
 			\AgdaBound{Lt}\AgdaSpace{}%
@@ -2125,9 +2214,6 @@
 			\AgdaBound{ρ}\AgdaSymbol{)}\<%
 			\\
 			%
-			\>[12]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ (⟪\ `\ Z\ •\ ids\ ∘\ S\AgdaUnderscore{}\ ⟫\ (⟪\ σ-curry\ r\ ⟫))}\<%
-			\\
-			%
 			\>[12]\AgdaSymbol{(}\AgdaFunction{transport}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
 			\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
@@ -2136,13 +2222,7 @@
 			\>[14]\AgdaSymbol{(}\AgdaFunction{Z-weaken}\AgdaSpace{}%
 			\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
 			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaInductiveConstructor{∅}\AgdaSymbol{\}}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
-			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaOperator{\AgdaFunction{⟪}}\AgdaSpace{}%
-			\AgdaFunction{σ-curry}\AgdaSpace{}%
-			\AgdaOperator{\AgdaFunction{⟫}}\AgdaSpace{}%
-			\AgdaBound{r}\AgdaSymbol{\})}\<%
+			\AgdaInductiveConstructor{∅}\AgdaSymbol{\})}\<%
 			\\
 			%
 			\>[14]\AgdaSymbol{(}\AgdaFunction{lemma-curry}\AgdaSpace{}%
@@ -2156,8 +2236,10 @@
 			\AgdaBound{Lt}\AgdaSpace{}%
 			\AgdaFunction{lemma-var}\AgdaSpace{}%
 			\AgdaOperator{\AgdaInductiveConstructor{S\AgdaUnderscore{}}}\AgdaSymbol{))}\<%
-			\\
-			%
+		\end{code}
+		%</iso-curry>
+		%<*iso-curry-eta>
+		\begin{code}
 			\>[8]\AgdaFunction{aux}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaInductiveConstructor{sn*}\AgdaSpace{}%
 			\AgdaBound{Lt}\AgdaSpace{}%
@@ -2182,82 +2264,40 @@
 			\AgdaBound{SNu}\AgdaSpace{}%
 			\AgdaSymbol{→}\<%
 			\\
-			\>[12][@{}l@{\AgdaIndent{0}}]%
-			\>[14]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ (⟪\ u\ •\ ids\ ∘\ ρ\ ⟫\ (⟪\ σ-curry\ (rename\ S\AgdaUnderscore{}\ r)\ ⟫)\ ·\ π\ B\ u)}\<%
+			%
+			\>[14]\AgdaFunction{lemma-curry-η}\AgdaSpace{}%
+			\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
+			\AgdaSymbol{=}\AgdaSpace{}%
+			\AgdaBound{r}\AgdaSymbol{\}}\AgdaSpace{}%
+			\AgdaBound{Lt}\AgdaSpace{}%
+			\AgdaBound{SNu}\AgdaSpace{}%
+			\AgdaBound{ρ}\AgdaSymbol{)}\<%
 			\\
 			%
-			\>[14]\AgdaFunction{lemma-·}\<%
-			\\
-			\>[14][@{}l@{\AgdaIndent{0}}]%
-			\>[16]\AgdaSymbol{(}\AgdaFunction{transport}\AgdaSpace{}%
+			\>[12]\AgdaSymbol{(}\AgdaFunction{transport}\AgdaSpace{}%
 			\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
 			\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
 			\\
-			\>[16][@{}l@{\AgdaIndent{0}}]%
-			\>[18]\AgdaSymbol{(}\AgdaFunction{subst-shift-curry-split}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
-			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaBound{r}\AgdaSymbol{\})}\<%
-			\\
-			%
-			\>[18]\AgdaSymbol{(}\AgdaBound{Lt}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
-			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaBound{ρ}\AgdaSymbol{\}}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
-			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaInductiveConstructor{π}\AgdaSpace{}%
-			\AgdaBound{A}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaInductiveConstructor{inj₁}\AgdaSpace{}%
-			\AgdaInductiveConstructor{refl}\AgdaSymbol{\}}\AgdaSpace{}%
-			\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
-			\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
-			\AgdaBound{SNu}\AgdaSymbol{)))}\<%
-			\\
-			%
-			\>[16]\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
-			\AgdaBound{SNu}\AgdaSymbol{))}\<%
-			\\
-			%
-			\>[12]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ (⟪\ σ-curry\ (rename\ S\AgdaUnderscore{}\ r)\ ⟫\ ·\ π\ B\ (`\ Z))}\<%
-			\\
-			%
-			\>[12]\AgdaSymbol{(}\AgdaFunction{lemma-·}\<%
-			\\
 			\>[12][@{}l@{\AgdaIndent{0}}]%
-			\>[14]\AgdaSymbol{(}\AgdaFunction{transport}\AgdaSpace{}%
-			\AgdaSymbol{(}\AgdaDatatype{SN*}\AgdaSpace{}%
-			\AgdaOperator{\AgdaFunction{⟦\AgdaUnderscore{}⟧}}\AgdaSymbol{)}\<%
-			\\
-			\>[14][@{}l@{\AgdaIndent{0}}]%
-			\>[16]\AgdaSymbol{(}\AgdaFunction{sym}\AgdaSpace{}%
-			\AgdaSymbol{(}\AgdaFunction{subst-weaken}\AgdaSpace{}%
+			\>[14]\AgdaSymbol{(}\AgdaFunction{Z-weaken}\AgdaSpace{}%
 			\AgdaSymbol{\{}\AgdaArgument{Σ}\AgdaSpace{}%
 			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaInductiveConstructor{∅}\AgdaSymbol{\}}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaArgument{N}\AgdaSpace{}%
-			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaBound{r}\AgdaSymbol{\}))}\<%
+			\AgdaInductiveConstructor{∅}\AgdaSymbol{\})}\<%
 			\\
 			%
-			\>[16]\AgdaSymbol{(}\AgdaBound{Lt}\AgdaSpace{}%
-			\AgdaSymbol{\{}\AgdaArgument{ρ}\AgdaSpace{}%
+			\>[14]\AgdaSymbol{(}\AgdaFunction{lemma-curry-η}\AgdaSpace{}%
+			\AgdaSymbol{\{}\AgdaArgument{t}\AgdaSpace{}%
 			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaOperator{\AgdaInductiveConstructor{S\AgdaUnderscore{}}}\AgdaSymbol{\}}\AgdaSpace{}%
+			\AgdaBound{r}\AgdaSymbol{\}}\AgdaSpace{}%
 			\AgdaSymbol{\{}\AgdaArgument{u}\AgdaSpace{}%
 			\AgdaSymbol{=}\AgdaSpace{}%
-			\AgdaInductiveConstructor{π}\AgdaSpace{}%
-			\AgdaBound{A}\AgdaSpace{}%
-			\AgdaSymbol{(}\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
-			\AgdaInductiveConstructor{Z}\AgdaSymbol{)\}}\AgdaSpace{}%
-			\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
-			\AgdaFunction{lemma-var}\AgdaSymbol{)))}\<%
-			\\
-			%
-			\>[14]\AgdaSymbol{(}\AgdaFunction{lemma-π}\AgdaSpace{}%
-			\AgdaFunction{lemma-var}\AgdaSymbol{))}\<%
+			\AgdaOperator{\AgdaInductiveConstructor{`}}\AgdaSpace{}%
+			\AgdaInductiveConstructor{Z}\AgdaSymbol{\}}\AgdaSpace{}%
+			\AgdaBound{Lt}\AgdaSpace{}%
+			\AgdaFunction{lemma-var}\AgdaSpace{}%
+			\AgdaOperator{\AgdaInductiveConstructor{S\AgdaUnderscore{}}}\AgdaSymbol{))}\<%
 		\end{code}
-		%</iso-curry>
+		%</iso-curry-eta>
 		%<*iso-uncurry>
 		\begin{code}%
 			%
@@ -2276,8 +2316,6 @@
 			\>[10]\AgdaFunction{lemma-ƛ}\<%
 			\\
 			\>[10][@{}l@{\AgdaIndent{0}}]%
-			\>[12]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ (⟪\ u\ •\ ids\ ∘\ ρ\ ⟫\ (ƛ\ ⟪\ σ-uncurry\ r\ ⟫))}\<%
-			\\
 			%
 			\>[12]\AgdaSymbol{(λ}\AgdaSpace{}%
 			\AgdaSymbol{\{}\AgdaBound{\AgdaUnderscore{}}\AgdaSymbol{\}\{}\AgdaBound{ρ}\AgdaSymbol{\}\{}\AgdaBound{u}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -2290,9 +2328,6 @@
 			\AgdaBound{Lt}\AgdaSpace{}%
 			\AgdaBound{SNu}\AgdaSpace{}%
 			\AgdaBound{ρ}\AgdaSymbol{)}\<%
-			\\
-			%
-			\>[12]\AgdaComment{--\ SN*\ ⟦\AgdaUnderscore{}⟧\ (ƛ\ ⟪\ σ-uncurry\ r\ ⟫)}\<%
 			\\
 			%
 			\>[12]\AgdaSymbol{(}\AgdaFunction{transport}\AgdaSpace{}%
