--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -18,6 +18,13 @@
 \newcommand{\rrsquare}{] \! ]}
 \newcommand{\rectangle}{\rule{0.4em}{0.7em}}
 
+\providecommand{\leftsquigarrow}{%
+	\mathrel{\mathpalette\reflect@squig\relax}%
+}
+\newcommand{\reflect@squig}[2]{%
+	\reflectbox{$\m@th#1\rightsquigarrow$}%
+}
+
 \usepackage{catchfilebetweentags}
 \usepackage{newunicodechar}
 \newunicodechar{≡}{\ensuremath{\mathnormal\equiv}}
@@ -28,6 +35,7 @@
 \newunicodechar{↪}{\ensuremath{\mathnormal\hookrightarrow}}
 \newunicodechar{⇄}{\ensuremath{\mathnormal\rightleftarrows}} 
 \newunicodechar{⇝}{\ensuremath{\mathnormal\rightsquigarrow}}
+\newunicodechar{⇜}{\ensuremath{\mathnormal\leftsquigarrow}}
 \newunicodechar{∎}{\ensuremath{\rectangle}}
 \newunicodechar{∘}{\ensuremath{\mathnormal\circ}}
 \newunicodechar{⊗}{\ensuremath{\mathnormal\otimes}}
@@ -65,6 +73,8 @@
 \newunicodechar{₂}{\ensuremath{{}_2}}
 \newunicodechar{ₗ}{\ensuremath{{}_l}}
 \newunicodechar{ᵣ}{\ensuremath{{}_r}}
+\newunicodechar{ℓ}{\ensuremath{\mathnormal\ell}}
+\newunicodechar{⊔}{\ensuremath{\mathnormal\sqcup}}
 
 \usepackage{amsthm}
 \theoremstyle{definition}
