Add some corrections

--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -16,7 +16,7 @@
 \newcommand{\rrangle}{\rangle\!\rangle}
 \newcommand{\llsquare}{[ \! [}
 \newcommand{\rrsquare}{] \! ]}
-\newcommand{\rectangle}{\rule{0.4em}{0.7em}}
+\newcommand{\rectangle}{\hspace{0.1em}\rule{0.4em}{0.7em}}
 
 \providecommand{\leftsquigarrow}{%
 	\mathrel{\mathpalette\reflect@squig\relax}%
