--- a/paper/references.bib
+++ b/paper/references.bib
@@ -156,3 +156,20 @@
 	url = {https://github.com/foones/formal-proofs/blob/master/strong-normalization/reducibility-candidates.agda},
 	options = {skipbib=true}
 }
+@book{sorensen2006lectures,
+	added-at = {2020-07-23T21:57:39.000+0200},
+	address = {Amsterdam; Oxford},
+	author = {Sørensen, Morten Heine and Urzyczyn, Pawel},
+	biburl = {https://www.bibsonomy.org/bibtex/2b1e23963813aa08af04c6045b272ebf9/gdmcbain},
+	description = {Lectures on the Curry-Howard isomorphism (Livre, 2006) [WorldCat.org]},
+	interhash = {d8cbd03d799c8bdbcc7095efc78f23ff},
+	intrahash = {b1e23963813aa08af04c6045b272ebf9},
+	isbn = {0444520775 9780444520777},
+	keywords = {03b15-higher-order-logic-type-theory},
+	publisher = {Elsevier},
+	refid = {1171193011},
+	timestamp = {2020-07-23T21:57:39.000+0200},
+	title = {Lectures on the Curry-Howard isomorphism},
+	url = {https://www.worldcat.org/title/lectures-on-the-curry-howard-isomorphism/oclc/1171193011&referer=brief_results},
+	year = 2006
+}
