--- a/paper/agda.sty
+++ b/paper/agda.sty
@@ -60,6 +60,7 @@
 \newunicodechar{Δ}{\ensuremath{\mathnormal\Delta}}
 \newunicodechar{σ}{\ensuremath{\mathnormal\sigma}}
 \newunicodechar{Σ}{\ensuremath{\mathnormal\Sigma}}
+\newunicodechar{Ω}{\ensuremath{\mathnormal\Omega}}
 \newunicodechar{ρ}{\ensuremath{\mathnormal\rho}}
 \newunicodechar{⇑}{\ensuremath{\mathnormal\Uparrow}}
 \newunicodechar{⇓}{\ensuremath{\mathnormal\Downarrow}}
@@ -69,8 +70,14 @@
 \newunicodechar{⟧}{\ensuremath{\mathnormal\rrsquare}} 
 \newunicodechar{﹙}{(}
 \newunicodechar{﹚}{)}
+\newunicodechar{₀}{\ensuremath{{}_0}}
 \newunicodechar{₁}{\ensuremath{{}_1}}
 \newunicodechar{₂}{\ensuremath{{}_2}}
+\newunicodechar{₃}{\ensuremath{{}_3}}
+\newunicodechar{₄}{\ensuremath{{}_4}}
+\newunicodechar{₅}{\ensuremath{{}_5}}
+\newunicodechar{₆}{\ensuremath{{}_6}}
+\newunicodechar{₇}{\ensuremath{{}_7}}
 \newunicodechar{ₗ}{\ensuremath{{}_l}}
 \newunicodechar{ᵣ}{\ensuremath{{}_r}}
 \newunicodechar{ℓ}{\ensuremath{\mathnormal\ell}}
@@ -79,6 +86,7 @@
 \usepackage{amsthm}
 \theoremstyle{definition}
 \newtheorem{codigo}{Código}
+\newtheorem{example}{Ejemplo}
 
 % https://tex.stackexchange.com/questions/47576/combining-ifxetex-and-ifluatex-with-the-logical-or-operation
 \newif\ifxetexorluatex
